

RELEASE NOTES
=============


2.42.2 - January ??, 2010

    Updated the Logtalk compiler in order to allow checking for module
    predicate properties without requiring importing the predicates into
    "user" (note, however, that the module must still be loaded prior to
    the compilation of source files calling the module predicates).

    Added support for compiling Free/Goal lambda expression calls (by
    automatically generating an auxiliary predicate).

    Added a compile_aux_clauses/1 public method, based on a predicate with
    the same name in SWI-Prolog, to the built-in object "logtalk". This
    method is usually called from goal_expansion/2 hooks in order to compile
    auxiliary clauses generated for supporting an expanded goal.

    Added the meta-predicate ignore/1, implemented by some Prolog compilers
    as a built-in predicate, as a Logtalk built-in method.

    Updated the SWI-Prolog config file in order to prevent the auto-loading
    of module libraries when querying predicate properties from Logtalk.

    Added predicates findall_member/4-5 to the library object "meta" (based
    on Richard O'Keefe's draft Prolog library proposal). Removed declaration
    and definition of the meta-predicates callable/1 and ignore/1 from the
    library entities "metap" and "meta".

    Added a library object, "meta_compiler", that can be used as an hook
    object to expand calls to the meta-predicates defined in the library
    object "meta" in order to avoid the meta-call overheads.

    Added a protocol, "loggingp", and category and object implementations,
    "logging" and "logger", declaring and defining basic functionality for
    logging events to files to the library.

    Added a protocol, "intervalp", and an object, "interval", declaring and
    defining basic temporal interval relations to the library (based on the
    James F. Allen Interval Algebra work).

    Added a category implementing named integer counters, "counters", to the